# discord-blue

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  codex_setup.sh  config.py  discord-blue.service  docker-compose.yml  main.py  pyproject.toml  setup_codex.sh
.github/: actionlint.yaml  dependabot.yml  github-repo-workflow.json  github.json
.github/workflows/: main.yml
discord_blue/: __main__.py  config.py  health.py  main.py
discord_blue/classes/: training.py
discord_blue/doodads/: _doodad_setup.py  _doodad_template.py  asset_label_doodad.py  asset_label_printer.py  doodad_template.py  error_doodad.py  every_code_doodad.py  setup_doodad.py
discord_blue/doodads/every_code/: __init__.py  bridge.py  messages.py  protocol.py  sessions.py  threads.py
discord_blue/doodads/molds/: mold.dymo.sample
discord_blue/every_code/: bridge.py  protocol.py  sessions.py  threads.py
discord_blue/plugs/: barcode_encoder_plug.py  discord_plug.py  shippo_plug.py
discord_blue/plugs/discord/: checks.py
discord_blue/plugzillas/: barcode_encoder_plug.py  checks.py  discord_plug.py  printnode_plug.py
discord_blue/plugzillas/discord/: checks.py
discord_blue/scripts/llm/: model.py  model_training.py  training_data.py
docker/: entrypoint.sh
plugzillas/: discord_plug.py  printnode_plug.py
tests/: __init__.py  fakes_every_code.py  test_every_code.py  test_health.py  test_repo_workflow_contracts.py
