[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "discord-blue"
version = "0.2.0"
description = ""
authors = [{ name = "Chris Busillo", email = "info@shinycomputers.com" }]
readme = "README.md"

requires-python = ">=3.13"
dependencies = [
    "toml",
    "discord.py",
    "torch",
    "pydantic",
    "numpy",
    "transformers",
    "polars",
    "aiofiles",
    "PyNaCl",
    "types-torch>=0.1.1",
]

[dependency-groups]
dev = [
    "types-aiofiles",
    "types-toml",
    "types-transformers",
    "types-torch",
    "black",
    "mypy",
    "hatchling",
    "ruff",
]

[project.scripts]
discord-blue = "discord_blue.__main__:main"

[tool.uv]
default-groups = "all"

[tool.black]
line-length = 133

[tool.ruff]
line-length = 133
select = ["ANN"]
#ignore = ["ANN401"]

