[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "discord-blue"
version = "0.2.0"
description = ""
authors = [{ name = "Chris Busillo", email = "info@shinycomputers.com" }]
readme = "README.md"

requires-python = ">=3.13"
dependencies = [
    "aiohttp",
    "toml",
    "discord.py",
    "PyNaCl",
]

[dependency-groups]
dev = [
    "types-toml",
    "mypy",
    "hatchling",
    "ruff",
]

[project.scripts]
discord-blue = "discord_blue.__main__:main"

[tool.uv]
default-groups = "all"

[tool.ruff]
line-length = 133

[tool.ruff.lint]
select = ["ANN", "B", "E", "F", "RUF"]
#ignore = ["ANN401"]
